--- a/templates/page.html.twig
+++ b/templates/page.html.twig
@@ -4,6 +4,7 @@
   <div{{ attributes }}>
 {% endif %}
 
+    <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
     {{ page.content }}
 
 {% if attributes -%}
