--- a/scss/ckeditor.scss
+++ b/scss/ckeditor.scss
@@ -1,6 +1,27 @@
 @charset 'utf-8';
 
 /*
- * Vendors
+ * Abstractions like variables, mixins, etc.
  */
-@import 'vendors/gridlex/gridlex';
+@import 'utils/mixins';
+@import 'utils/variables';
+
+/*
+ * Common.
+ */
+@import 'common/reset';
+@import 'common/fonts';
+@import 'common/grid';
+@import 'vendor/gridlex/gridlex';
+
+/*
+ * Atoms.
+ */
+@import 'atoms/link';
+@import 'atoms/button';
+@import 'atoms/title';
+
+ /*
+ * Molecules.
+ */
+@import 'molecules/edito';
