--- a/templates/views/views-view.html.twig
+++ b/templates/views/views-view.html.twig
@@ -1,47 +1,74 @@
-{% if attributes.class|length -%}
-  {%
-    set classes = [
-      dom_id ? 'js-view-dom-id-' ~ dom_id,
-    ]
-  %}
-  <{{ block_type|default('div') }}{{ attributes.addClass(classes) }}>
-    {{ title_prefix }}
-    {{ title_suffix }}
+{%
+  set classes = [
+    'view',
+    'view-' ~ id|clean_class,
+    'view-id-' ~ id,
+    'view-display-id-' ~ display_id,
+    dom_id ? 'js-view-dom-id-' ~ dom_id,
+  ]
+%}
+
+{% if wrapper|default(true) -%}
+  <{{ wrapper_type|default('div') }}{{ attributes.addClass(classes) }}>
+    {{ title_suffix.contextual_links }}
 {% endif %}
 
-  {% if title %}
-    <{{ title_type|default('h2') }}{{ title_attributes }}>
-      {% block title %}
+  {% block title %}
+    {% if title %}
+      <{{ title_type|default('h1') }}{{ title_attributes }}>
         {{ title }}
-      {% endblock %}
-    </{{ title_type|default('h2') }}>
-  {% endif %}
+      </{{ title_type|default('h1') }}>
+    {% endif %}
+  {% endblock %}
 
   {% if header %}
-    <header>
+    <div class="view-header">
       {{ header }}
-    </header>
+    </div>
+  {% endif %}
+  {% if exposed %}
+    <div class="view-filters">
+      {{ exposed }}
+    </div>
+  {% endif %}
+  {% if attachment_before %}
+    <div class="attachment attachment-before">
+      {{ attachment_before }}
+    </div>
   {% endif %}
 
-  {{ exposed }}
-  {{ attachment_before }}
+  {% if rows %}
+    <div class="view-content">
+      {{ rows }}
+    </div>
+  {% elseif empty %}
+    <div class="view-empty">
+      {{ empty }}
+    </div>
+  {% endif %}
 
-  {% block rows %}
-    {{ rows }}
-  {% endblock %}
-  {{ empty }}
-  {{ pager }}
-
-  {{ attachment_after }}
-  {{ more }}
-
+  {% if pager %}
+    {{ pager }}
+  {% endif %}
+  {% if attachment_after %}
+    <div class="attachment attachment-after">
+      {{ attachment_after }}
+    </div>
+  {% endif %}
+  {% if more %}
+    {{ more }}
+  {% endif %}
   {% if footer %}
-    <footer>
+    <div class="view-footer">
       {{ footer }}
-    </footer>
+    </div>
+  {% endif %}
+  {% if feed_icons %}
+    <div class="feed-icons">
+      {{ feed_icons }}
+    </div>
   {% endif %}
 
-  {{ feed_icons }}
-{% if attributes.class|length -%}
-  </{{ block_type|default('div') }}>
+{% if wrapper|default(true) -%}
+  </{{ wrapper_type|default('div') }}>
 {% endif %}
