--- a/templates/media/media.html.twig
+++ b/templates/media/media.html.twig
@@ -1,7 +1,9 @@
 {%
   set classes = [
-    'block',
-    'block-' ~ plugin_id|clean_class,
+    'media',
+    'media--type-' ~ media.bundle()|clean_class,
+    not media.isPublished() ? 'media--unpublished',
+    view_mode ? 'media--view-mode-' ~ view_mode|clean_class,
   ]
 %}
 
@@ -9,14 +11,6 @@
   <{{ wrapper_type|default('div') }}{{ attributes.addClass(classes) }}>
     {{ title_suffix.contextual_links }}
 {% endif %}
-
-  {% if label %}
-    <{{ title_type|default('h2') }}{{ title_attributes }}>
-      {% block title %}
-        {{ label }}
-      {% endblock %}
-    </{{ title_type|default('h2') }}>
-  {% endif %}
 
   {% block content %}
     {{ content }}
